--- a/viewss/index.html
+++ b/viewss/index.html
@@ -60,37 +60,41 @@
   <header>
     <nav class="navbar">
       <div class="logo">
-        <a href="/">Gimbrutan's Shopify</a>
+        <a href="/">ShopLocator</a>
       </div>
       <ul class="nav-links">
         <li><a href="/">Home</a></li>
-        <li><a href="/request"> Product</a></li>
-        <li><a href="/dashboard">Dashboard</a></li>
+        <li><a href="/request">Request Product</a></li>
+        <li><a href="/dashboard">Shop Dashboard</a></li>
       </ul>
-      <!-- <button class="get-started-btn">Get Started</button> -->
+      <div class="menu-toggle">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
     </nav>
   </header>
+  
   <main>
     <section class="hero">
       <h2>Find Products in Local Shops</h2>
-      <p>Connect with nearby shops and find the products you need</p>
+      <p>Connect with nearby shops and find the products you need, quickly and easily.</p>
     </section>
     <section class="cards">
       <div class="card">
         <h3>Locate Shops</h3>
-        <p>Find nearby shops based on your location and preferences</p>
-        <a href="#">Find Shops →</a>
+        <p>Discover shops nearby based on your preferences.</p>
+        <a href="/request">Find Shops →</a>
       </div>
       <div class="card">
-        <h3>Request Products</h3>
-        <p>Send product requests to multiple shops at once</p>
-        <a href="/request">Make Request →</a>
+        <h3>Submit Requests</h3>
+        <p>Send product requests to shops in your area.</p>
+        <a href="/request">Submit Request →</a>
       </div>
       <div class="card">
-        <h3>Shop Dashboard</h3>
-        <p>For shop owners: Manage your shop and respond to requests</p>
-        <a href="/dashboard">View Dashboard →</a>
-      </div>
+        <h3>Manage Your Shop</h3>
+        <p>Shop owners can manage their shop details and respond to requests.</p>
+        <a href="/dashboard">Go to Dashboard →</a>
       </div>
     </section>
   </main>
